--- a/src/app/product-tile/product-tile.component.html
+++ b/src/app/product-tile/product-tile.component.html
@@ -7,7 +7,7 @@
         <span>{{ product.rating.rate }}</span>
         <i class="fa-solid fa-star"></i>
       </div>
-      <div class="count">{{ product.rating.count }}</div>
+      <div class="price">{{ product.price }}</div>
     </div>
 
     <app-add-to-cart/>
