--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -24,5 +24,5 @@
       <option value="notAvailable">Not Present</option>
     </select>
   </div>
-  <button type="submit" (click)="onFilter()">Apply Filters</button>
+  <button type="submit">Apply Filters</button>
 </form>
