Implemented Cart Page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,8 @@
     <i class="fa-solid fa-magnifying-glass"></i>
   </div>
   <div class="header-item cart">
-    <i class="fa-solid fa-cart-shopping"></i>
+    <a [routerLink]="['/cart']">
+      <i class="fa-solid fa-cart-shopping"></i>
+    </a>
   </div>
 </header>
