--- a/src/app/add-to-cart/add-to-cart.component.html
+++ b/src/app/add-to-cart/add-to-cart.component.html
@@ -3,8 +3,8 @@
 </div>
 
 <div class="counter-container" *ngIf="cartAdded">
-  <button (click)="changeQuantity(-1, $event)" [disabled]="quantity === 0">-</button>
+  <button (click)="updateQuantity(-1, $event)" [disabled]="quantity === 0">-</button>
   <span>{{ quantity }}</span>
-  <button (click)="changeQuantity(1, $event)" [disabled]="quantity === 5">+</button>
+  <button (click)="updateQuantity(1, $event)" [disabled]="quantity === 5">+</button>
   <button (click)="removeFromCart($event)">Remove</button>
 </div>
