--- a/src/app/product-tile/product-tile.component.html
+++ b/src/app/product-tile/product-tile.component.html
@@ -10,7 +10,7 @@
       <div class="price">{{ product.price }}</div>
     </div>
 
-    <app-add-to-cart/>
+    <app-add-to-cart [product]="product"/>
     <a [routerLink]="['/product/edit', product.id]">Edit</a>
   </div>
 </a>
