--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="home-container">
   <app-filter (filterParams)="handleFilters($event)" />
-  <app-product-grid [filterParams]="filterParams"  />
+  <app-product-grid />
 </div>
