--- a/src/app/product/components/product-grid/product-grid.component.html
+++ b/src/app/product/components/product-grid/product-grid.component.html
@@ -1,25 +1,9 @@
 <div *ngIf="(products$ | async) as products">
 
   <div class="filter-badges" *ngIf="hasFilters()">
-    <span class="filter-badge" *ngIf="filterParams?.minPrice">
-      Min {{ filterParams?.minPrice }}
-      <button (click)="removeFilter('minPrice')">x</button>
-    </span>
-    <span class="filter-badge" *ngIf="filterParams?.maxPrice">
-      Max {{ filterParams?.maxPrice }}
-      <button (click)="removeFilter('maxPrice')">x</button>
-    </span>
-    <span class="filter-badge" *ngIf="filterParams?.stock">
-      Stock: {{ filterParams?.stock === 'available' ? 'Available' : 'Not Available' }}
-      <button (click)="removeFilter('stock')">x</button>
-    </span>
-    <span class="filter-badge" *ngIf="filterParams?.rating">
-      Rating: {{ filterParams?.rating }}
-      <button (click)="removeFilter('rating')">x</button>
-    </span>
-    <span class="filter-badge" *ngIf="filterParams?.reviews">
-      Reviews: {{ filterParams?.reviews === 'available' ? 'Present' : 'Not Present' }}
-      <button (click)="removeFilter('reviews')">x</button>
+    <span class="filter-badge" *ngFor="let badge of filterBadges">
+      {{ badge.label }}: {{ badge.value }}
+      <button (click)="removeFilter(badge.key)">x</button>
     </span>
     <button (click)="removeAllFilters()" class="remove-filters">Remove All Filters</button>
   </div>
